--- a/Web/package.json
+++ b/Web/package.json
@@ -9,13 +9,17 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.8",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fetch": "^1.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.10.4",
     "node-fetch": "^3.3.2",
+    "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
