--- a/Web/package.json
+++ b/Web/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "fetch": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mqtt": "^5.10.4",
     "node-fetch": "^3.3.2",
     "pg": "^8.14.1",
