--- a/Web/package.json
+++ b/Web/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.8",
+    "codemirror": "^6.0.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -18,15 +19,17 @@
     "fetch": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "mqtt": "^5.10.4",
+    "mqtt": "^5.11.0",
+    "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
     "pg": "^8.14.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.4.1",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
