--- a/Web/package.json
+++ b/Web/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "router": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
