--- a/Web/package.json
+++ b/Web/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "fetch": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "mqtt": "^5.12.1",
     "multer": "^1.4.5-lts.2",
